Add more functions.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,4 @@
-[package]
-name = "bencode"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+resolver = "3"
+members=["library"]
 
-[dependencies]
-rand = "0.9.2"
