--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 resolver = "3"
-members=["library"]
+members=[ "examples/bencode_fibonacci", "examples/bencode_read_torrent_files","library"]
 
