--- a/examples/bencode_read_torrent_files/Cargo.toml
+++ b/examples/bencode_read_torrent_files/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bencode_lib= { path =  "../../library/" }
+torrent_file= { path = "./src/torrent_file/"}
