centralised error strings

--- a/examples/bencode_read_torrent_files/Cargo.toml
+++ b/examples/bencode_read_torrent_files/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-torrent_file= { path = "./src/torrent_file/"}
+torrent_file= { path = "../torrent_file_lib/" }
