--- a/examples/torrent_file_lib/Cargo.toml
+++ b/examples/torrent_file_lib/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bencode_lib= { path =  "../../../../library/" }
+bencode_lib= { path =  "../../library/" }
