--- a/examples/bencode_torrent_to_xml/Cargo.toml
+++ b/examples/bencode_torrent_to_xml/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2024"
 
 [dependencies]
 bencode_lib= { path =  "../../library/" }
+bencode_utility_lib= { path =  "../bencode_utility_lib/" }
