--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ members = [
     "examples/bencode_error_handling",
     "examples/bencode_format_conversions",
     "examples/bencode_zerocopy",
+    "examples/bencode_memory_pool",
 ]
