--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,7 @@ members = [
     "examples/bencode_format_conversions",
     "examples/bencode_zerocopy",
     "examples/bencode_memory_pool",
+    "examples/bencode_const_generics",
+    "examples/bencode_minimal",
+    "examples/bencode_full",
 ]
