--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,4 +22,5 @@ members = [
     "examples/bencode_const_generics",
     "examples/bencode_minimal",
     "examples/bencode_full",
+    "examples/bencode_iterative",
 ]
