--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,5 @@ members = [
     "examples/bencode_minimal",
     "examples/bencode_full",
     "examples/bencode_iterative",
+    "examples/bencode_lightweight_errors",
 ]
